--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
  <head>
-
+     <script src="jquery-3.5.1.min.js"></script>
+     <link rel="stylesheet" type="text/css" href="fix.css">
    <title>уроки js</title>
    <meta charset="utf-8">
  </head>
- <body onload="onLoaded ()">
-<div id="image" onclick="onClick(domElements.docImage,domElements.docX1)"></div>
+ <body>
+<div id="image"></div>
 <label id="text"></label>
 <label id="text1"></label>
 <label id="text2"></label>
 
+<input type="text" id="textInput">
+<button id="buttonId">Нажать</button>
+
+<button class="show-popup" rel="popupId">🔥</button>
+
+<div class="popup" id="popupId"><img src="images/start.gif"></div>
 
 
-
-
-<script src="1.js"></script>
-<script src="jquery-3.5.1.min.js"></script>
+<script src="script.js"></script>
  </body>
 
 </html>
